--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="tougenotizu">
+    <wb-module deploy-name="tougetizu_kantouVer">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/tougenotizu/build/classes"/>
-        <property name="context-root" value="tougenotizu"/>
+        <property name="java-output-path" value="/tougetizu_kantouVer/build/classes"/>
+        <property name="context-root" value="tougetizu_kantouVer"/>
     </wb-module>
 </project-modules>
