--- a/WebContent/css/NewHome.css
+++ b/WebContent/css/NewHome.css
@@ -1,47 +1,11 @@
 @CHARSET "UTF-8";
-		body {
-		   margin:0;
-		   padding:0;
-		   line-height:1.6;
-		   letter-spacing:1px;
-		   font-family:Verdana, Helvetica, sans-serif;
-		   font-size:12px;
-		   color:#333;
-		   background:#fff;
-		}
-
-		table {
-			text-align:center;
-			margin:0 auto;
-		}
-
-		/* ========TEMPLATE LAYOUT======== */
-		#top {
-		   width:780px;
-		   margin:30px auto;
-		   border:1px solid #333;
-		}
-
-		#header {
-		   width: 100%;
-		   height: 80px;
-		   background-color: black;
-		}
-
-		#main {
-		   width: 100%;
-		   height: 500px;
-		   text-align: center;
-		}
-
-		#footer {
-			width: 100%;
-			height: 80px;
-			background-color: black;
-			clear:both;
-		}
-
-		#text-center {
-			display: inline-block;
-			text-align: center;
-		}
+body{
+	height:100%;
+	width:100%;
+}
+.main_img{
+	margin-top:10%;
+	margin-left:9%;
+	height:40%;
+	width:80%;
+}
