ログイン画面を作りました。

--- a/WebContent/css/NewLogin.css
+++ b/WebContent/css/NewLogin.css
@@ -17,32 +17,19 @@
 		}
 
 		/* ========ID LAYOUT======== */
-		#top {
-		   width:780px;
-		   margin:30px auto;
-		   border:1px solid #333;
-		}
-
-		#header {
-		   width: 100%;
-		   height: 80px;
-		   background-color: black;
-		}
-
 		#main {
 		   width: 100%;
 		   height: 500px;
 		   text-align: center;
 		}
 
-		#footer {
-			width: 100%;
-			height: 80px;
-			background-color: black;
-			clear:both;
-		}
+
 
 		#text-link {
 			display: inline-block;
 			text-align: right;
 		}
+
+		footer{
+	margin-top:20%;
+}
