--- a/WebContent/css/productDetails.css
+++ b/WebContent/css/productDetails.css
@@ -1,1 +1,52 @@
 @CHARSET "UTF-8";
+
+body{
+	heigth:100%;
+	width:100%;
+}
+
+.main{
+	heigth:auto;
+	width:auto;
+}
+.img{
+	float:left;
+	height:250px;
+	width:250px;
+	border:solid 3px  black;
+	margin-top:5%;
+}
+
+.itemData{
+	position:absolute;
+	left:20%;
+	margin-top:3%;
+}
+
+h1{
+	border-bottom:solid 3px  black;
+}
+
+.price{
+	border:solid 3px  black;
+	height:50px;
+	width:250px;
+}
+
+.descriptionOfItem{
+	border:solid 3px  black;
+	height:60px;
+	width:250px;
+}
+
+.paymentButton{
+	float:left;
+	border:solid 3px  black;
+}
+
+.homeButton{
+	border:solid 3px  black;
+}
+footer{
+	margin-top:40%;
+}
